Fix: overflow and removed left-side content.

--- a/style.css
+++ b/style.css
@@ -112,71 +112,42 @@ html {
 }
 
 /* Body CSS */
-.mainBodyContainer {
-    padding: 16px 0;
-    margin: 16px 0;
-    display: flex;
-    align-items: center;
-    gap: 0 32px;
-    position: relative;
-}
-/* left side container */
-.bodyleftconatiner {
-    width: 28%;
-    margin-left: 128px;
-    padding: 8px 0;
-    border: 1px solid black;
-    border-radius: 6px;
-}
-.bodyleftconatiner h3 {
-    padding-left: 8px;
-    letter-spacing: 0.8px;
-    border-bottom: 1px solid black;
-}
-.difficultyConatiner {
-    padding-left: 8px;
-}
-
-.bodyrightcontainer {
-    width: 100%;
-    margin-right: 128px;
-}
 .projects-container {
     display: grid;
+    place-items: center;
+    padding: 32px;
     grid-template-columns: auto auto auto;
-    gap: 36px;
+    gap: 32px;
 }
+/* project cards css */
 .project-card {
-    width: 300px;
-    padding: 4px 0;
-    border: 1px solid black;
-    border-radius: 4px;
+    width: 340px;
+    border: 2px solid black;
+    border-radius: 6px;
     cursor: pointer;
+    padding: 0 0 6px 0;
 }
-.project-card a {
+.project-card > a {
     text-decoration: none;
     color: black;
 }
 .project-image {
-    width: 280px;
-    height: 300px;
+    width: 100%;
+    height: 325px;
+    border-radius: 4px;
     overflow: hidden;
-    padding: 8px;
 }
 .project-title {
     padding-left: 12px;
-    border-top: 1px solid black;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0.8px;
     border-bottom: 1px solid black;
 }
 .tags {
     display: flex;
     justify-content: space-between;
     padding: 0 12px;
-}
-@media screen and (max-width: 1500px) {
-    .projects-container {
-        grid-template-columns: auto auto;
-    }
 }
 
 /* Footer CSS */
